grammar-tree.txt
programm ::= {statement}
statement ::=  
    | "PRINT" string nl
    | "LET" identifier "=" expression nl
    | "IF" comparison "THEN" nl {statement} "ENDIF" nl
    | "WHILE" comparison nl "DO" {statement} nl "ENDWHILE" nl
    | "INPUT" string identifier
    | "GOTO" identifier nl
comparisons ::= comparison {("AND" | "OR") comparison}
comparison ::= (expression equals expression) | ("true" | "false")
expression ::= term {("+" | "-") term}
term ::= unary {("*" | "/" | "%") unary}
unary ::= ["+" | "-"] primary
primary ::= identifier | number
// implement later
// complex ::= identifier | string
equals ::= ("==" | "!=" | "<=" | ">=" | ">" | "<")
nl ::= '\n'+
